# copilotadvisor

./: .gitignore  .mcp.json  ERROR_RESOLUTION_SUMMARY.md  PROMPTS_GUIDE.md  README-new.md  README.md  copilotadvisor.code-workspace  setup.md  test-root.prompts.md
.devcontainer/: Dockerfile  docker-compose.yml
.github/: copilot-instructions.md
.github/prompts/: commit-push.md  commit-push.prompt.md  execute-phase.prompt.md  resolve-errors.md  resolve-errors.prompts.md  update-plan.prompt.md  update-plan.prompts.md
.github/prompts/conversion/: commit-push.prompt.md  execute-phase.prompt.md  resolve-errors.prompt.md  update-plan.prompt.md
document_collection/: Makefile  PHASE_7_COMPLETION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  test.md
document_collection/documents/: wellarchitected-framework.md
document_collection/src/: __init__.py
document_collection/src/document_collection/: __init__.py  __main__.py
document_collection/src/document_collection/cli/: __init__.py  main.py
document_collection/src/document_collection/converters/: __init__.py  excel_converter.py  factory.py  manager.py  markdown_processor.py  pdf_converter.py  powerpoint_converter.py  word_converter.py
document_collection/src/document_collection/core/: __init__.py  config.py  exceptions.py  interfaces.py  models.py  service.py  types.py
document_collection/src/document_collection/mcp_server/: __init__.py  __main__.py  server.py
document_collection/src/document_collection/retrievers/: __init__.py  factory.py  local_retriever.py  manager.py  web_retriever.py
document_collection/test_output/: tmp4fr2au1f.md
document_collection/tests/: __init__.py  test_basic.py  test_cli.py  test_cli_enhanced.py  test_config.py  test_converters.py  test_mcp_server.py  test_retrievers.py  test_service_enhanced.py
planning/: plan-document-collection.md
prompts/: README.md
prompts/cloud/: cloud-architecture.md
prompts/data/: data-architecture.md
prompts/general/: comprehensive-review.md  quick-assessment.md  structured-review-process.md
prompts/integration/: integration-review.md
prompts/performance/: performance-analysis.md
prompts/security/: security-review.md
requirements/: prd-document-collection.md
src/: __init__.py
src/document_collection/cli/: main.py
tests/: test_cli.py  test_converters.py  test_mcp_server.py  test_retrievers.py  test_service.py
